# thera-os-sdk

./: .gitignore  LICENSE  README.md  pyproject.toml
src/thera_os/: __init__.py  client.py  errors.py  types.py
tests/: test_client.py
